# posix-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  posix-api.cabal  posix.cabal
.github/workflows/: build.yaml
cbits/: HaskellPosix.c
include/: HaskellPosix.h  custom.h
src-assertions/: Assertion.hs
src-linux/Posix/Socket/: Platform.hsc
src-noassertions/: Assertion.hs
src/Foreign/C/String/: Managed.hs
src/Linux/: Epoll.hs  MessageQueue.hs  Socket.hs  Systemd.hs
src/Linux/Epoll/: Types.hsc
src/Linux/MessageQueue/: Types.hsc
src/Linux/Socket/: Types.hsc
src/Posix/: Directory.hs  File.hs  MessageQueue.hs  Poll.hs  Select.hs  Socket.hs  Types.hsc
src/Posix/File/: Types.hsc
src/Posix/MessageQueue/: Types.hsc
src/Posix/Poll/: Types.hsc
src/Posix/Socket/: Types.hsc
src/Posix/Struct/AddressInfo/: Peek.hsc  Poke.hsc
src/Posix/Struct/SocketAddressInternet/: Peek.hsc
test/: Main.hs
