cabal-version: 2.2
name: posix
version: 0.1.0.0
synopsis: posix bindings
description:
  This library provides a very thin wrapper around POSIX APIs. It can be
  compiled on any operating system that implements the standard as specified
  in <http://pubs.opengroup.org/onlinepubs/9699919799/ IEEE Std 1003.1>
  faithfully. It has similar goals as the `unix` package, but its design
  differs in several areas:
  .
  * `ByteArray` and `Addr` are used pervasively. There is no use of
    `String` in this library.
  .
  * Functions do not throw errors. This library uses `IO (Either Errno a)`
    in places where `unix` would use `IO a`.
  .
  * The numeric types from `Foreign.C.Types` and `System.Posix.Types` are
    used in the type signatures of functions so that a haskell function's
    type signature matches its underlying POSIX equivalent exactly.
  .
  * Flags are newtypes over `CInt` (or whatever integral type matches the
    posix specification) rather than enumerations. The data constructors
    are exported, making the types extensible for operating system that
    have additional flags.
  .
  Unlike `network`, this sockets API in this library does not integrate
  sockets with GHC's event manager. This is geared
  toward an audience that understands how to use `threadWaitRead`
  and `threadWaitWrite` with unsafe FFI calls to avoid blocking
  the runtime.
homepage: https://github.com/andrewthad/posix
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
category: System
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Posix.Directory
    Posix.Socket
    Posix.Socket.Types
  build-depends:
    , base >=4.11.1 && <5
    , primitive >= 0.6.4
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
  c-sources: cbits/HaskellPosix.c
  include-dirs: include
  includes: HaskellPosix.h

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , posix
    , tasty
    , tasty-hunit
    , primitive
  ghc-options: -Wall -O2 -threaded
  default-language: Haskell2010

